--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,19 @@
+*{
+  font-family:'Pretendard'
+}
+
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@font-face{
+  font-family: 'Pretendard';
+  src: url('/public/fonts/PretendardVariable.ttf') format('truetype');
+}
+
+@media screen and (max-width: 600px) {
+  body{min-width:550px;}
 }
